--- a/src/app/drag-drop/drag-drop.component.html
+++ b/src/app/drag-drop/drag-drop.component.html
@@ -63,7 +63,19 @@
                 </div>
             </div>
         </section>
-        
+        <mat-divider></mat-divider>
+        <section>
+            <mat-label><strong>Instruction: </strong></mat-label>
+            <div class="example-button-row">
+                <div class="example-flex-container">
+                    <div class="example-button-container">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="example-label">When pictures are dropping down you have to guess their nationalities and then drag and drop it to their countries name. </div>
+        </section>
       </div>
       
       <div class="col-8">
